fix(pfp): spacing

--- a/css/home.css
+++ b/css/home.css
@@ -10,7 +10,7 @@
     align-items: center;
     gap: 30px; /* Space between image and text */
     margin-bottom: 30px; /* Space below the header */
-    margin-top: 15px;
+    margin-top: 30px;
 }
 
 .p a{
